--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
 		.correct {
 		  color: green;
 		}
+		
+		#change-font{
+			width: 100px;
+		}
 	</style>
   </head>
   <body>
@@ -70,6 +74,7 @@
         <div id="japanese-text"></div>
       </div>
 	  <div id="counter"></div>
+	  <button id="change-font" onclick="changeFont()" style="display: none">Change Font</button>
       <input
         id="answer-input"
         type="text"
@@ -84,6 +89,7 @@
 		const counter = document.getElementById("counter");
 		const answerInput = document.getElementById("answer-input");
 		const fileInput = document.getElementById("file-input");
+		const changeFontButton = document.getElementById("change-font");
 		let vocabs = [];
 		let current_vocabs = [];
 		let current_index = -1;
@@ -91,6 +97,10 @@
 		let current_pure_vocab = "";
 		let current_meaning = "";
 		let mode = 0;
+		let font_index = -1;
+		const FONTS = [
+			//Add font paths here
+		];
 
 		fileInput.addEventListener("change", function (e) {
 			const file = e.target.files[0];
@@ -107,6 +117,11 @@
 
 				fileInput.style["display"] = "none";
 				answerInput.style["display"] = "";
+				
+				if(FONTS.length > 0){
+					changeFontButton.style["display"] = "";
+					loadFonts();
+				}
 				
 				current_vocabs = vocabs.slice(0);
 				setNewVocab();
@@ -183,6 +198,21 @@
 					japaneseLabel.classList = "";
 				}
 			}
+		}
+
+		function loadFonts(){
+			count = 0;
+			FONTS.forEach((font) => {
+				const url = "url(file:///" + font + ")";
+				const fontFace = new FontFace("font" + count, url);
+				document.fonts.add(fontFace);
+				count++;
+			});
+		}
+
+		function changeFont() {
+			font_index = Math.floor(Math.random() * FONTS.length);
+			japaneseLabel.style.fontFamily = "font" + font_index;
 		}
 	</script>
   </body>
