Change font of answer label as well

--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
 		function changeFont() {
 			font_index = Math.floor(Math.random() * FONTS.length);
 			japaneseLabel.style.fontFamily = "font" + font_index;
+			answerInput.style.fontFamily = "font" + font_index;
 		}
 	</script>
   </body>
